@@ -12,7 +12,6 @@
     <li class="lead">Add more gun types</li>
     <li class="lead">Exotic weapons</li>
     <li class="lead">Loot generator</li>
-    <li class="lead">Weapon name generator?</li>
     <li class="lead">Add mode for fully randomised weapon stats</li>
   </ul>
   <p class="lead">If you have any suggestions I would love to hear from you at <a href="mailto:mjcadzdev@gmail.com?Subject=Hello" target="_top">mjcadzdev@gmail.com</a>
