@@ -11,6 +11,8 @@
     <link rel="stylesheet" type = "text/css" href="{{ url_for('static', filename = 'style.css') }}">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type = "text/css" href="{{ url_for('static', filename = 'bootstrap.min.css') }}">
+    <!-- Font Awesome -->
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
     <!-- header colours -->
     <!-- Chrome, Firefox OS and Opera -->
     <meta name="theme-color" content="#2C3E50">
@@ -45,7 +47,12 @@
       {% block body %}
       {% endblock %}
       <footer class="footer">
-        <p style="color:white;text-shadow: 0px 0px 2px #000000;">	&nbsp;	&nbsp;mjcadz 2017 - v1.1</p>
+        <ul class="share-buttons">
+          <li><a href="https://github.com/mjcadz/weapon-gen-app" target="_blank" title="View on Github" id="github" onclick="return share(this.id)"><i class="fa fa-github-alt fa-2x" aria-hidden="true"></i><span class="sr-only">View Github code</span></a></li>
+          <li><a href="http://www.reddit.com/submit?url=http%3A%2F%2Fwww.sfrpgtools.com&title=" target="_blank" title="Submit to Reddit" id="reddit" onclick="return share(this.id)"><i class="fa fa-reddit-alien fa-2x" aria-hidden="true"></i><span class="sr-only">Submit to Reddit</span></a></li>
+          <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Fwww.sfrpgtools.com&text=:%20http%3A%2F%2Fwww.sfrpgtools.com" target="_blank" title="Tweet" id="twitter" onclick="return share(this.id)"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i><span class="sr-only">Tweet</span></a></li>
+          <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.sfrpgtools.com&t=" target="_blank" title="Share on Facebook" id="facebook" onclick="return share(this.id)"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i><span class="sr-only">Share on Facebook</span></a></li>
+        </ul>
       </footer>
     </div> <!-- /container -->
     <!-- Optional JavaScript -->
@@ -53,6 +60,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <script type = "text/javascript" src = "{{ url_for('static', filename = 'common.js') }}" ></script>
     {% block includes %}
     {% endblock %}
   </body>
