@@ -3,6 +3,7 @@ New Features:
   - Name Generator
   - 'Remove' button for individual entries
 Changes:
+  - add share buttons
   - change Swoop Hammer to Longhammer
   - no projectile, only energy damage types for blaster, thrower, and beam rifle
   - scout rifle has lower damage to offset max range
